@@ -455,4 +455,7 @@ Tilmann Bitterberg <transcode@tibit.org>
 Paul Eggleton <paul@softec.co.nz>
   Amiga MOD support
 
+Jeff Smith <whydoubt@yahoo.com>
+  CACA video output plugin
+
 (let us know if we've forgotten anyone)
