@@ -17,7 +17,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA
  *
- * $Id: xine.h.in,v 1.115 2004/01/11 15:31:53 mroi Exp $
+ * $Id: xine.h.in,v 1.116 2004/02/28 19:56:41 valtri Exp $
  *
  * public xine-lib (libxine) interface and documentation
  *
@@ -166,6 +166,7 @@ void xine_close_video_driver (xine_t *self, xine_video_port_t  *driver);
 #define XINE_VISUAL_TYPE_DFB               5
 #define XINE_VISUAL_TYPE_PM                6 /* used by the OS/2 port */
 #define XINE_VISUAL_TYPE_DIRECTX           7 /* used by the win32/msvc port */
+#define XINE_VISUAL_TYPE_CACA              8
 
 /*
  * free all resources, close all plugins, close engine.
